# ssi-onboarding-24

./: CMakeLists.txt  README.md  main.c
